fix: firefox QT consistency

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,6 +5,9 @@ $lock = swaylock
 
 monitor = ,preferred,auto,1.2
 
+env = GTK_THEME,Adwaita-dark
+env = QT_QPA_PLATFORMTHEME,qt6ct
+
 exec-once = $terminal
 
 bind = $mod, Return, exec, $terminal
@@ -12,14 +15,20 @@ bind = $mod, SPACE, exec, $menu
 bind = $mod, Q, killactive
 bind = $mod, O, exec, $lock
 
-bind = $mod, 1, workspace, 1
-bind = $mod, 2, workspace, 2
-bind = $mod, 3, workspace, 3
-bind = $mod, 4, workspace, 4
-bind = $mod, 5, workspace, 5
+bind = MOD1, 1, workspace, 1
+bind = MOD1, 2, workspace, 2
+bind = MOD1, 3, workspace, 3
+bind = MOD1, 4, workspace, 4
+bind = MOD1, 5, workspace, 5
 
 bind = $mod, H, movefocus, l
 bind = $mod, L, movefocus, r
 bind = $mod, K, movefocus, u
 bind = $mod, J, movefocus, d
+
+bind = $mod SHIFT, 1, movetoworkspace, 1
+bind = $mod SHIFT, 2, movetoworkspace, 2
+bind = $mod SHIFT, 3, movetoworkspace, 3
+bind = $mod SHIFT, 4, movetoworkspace, 4
+bind = $mod SHIFT, 5, movetoworkspace, 5
 
