fix: no animations

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -10,6 +10,21 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 
 exec-once = $terminal
 
+general {
+    gaps_in = 0   
+    gaps_out = 0   
+    border_size = 0 
+    layout = dwindle
+}
+
+decoration {
+    rounding = 0   
+}
+
+animations {
+    enabled = false
+}
+
 bind = $mod, Return, exec, $terminal
 bind = $mod, SPACE, exec, $menu
 bind = $mod, Q, killactive
