--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,6 +2,7 @@ $mod = SUPER
 $terminal = kitty 
 $menu = wofi --show drun
 $lock = swaylock
+$status = waybar
 
 monitor = ,preferred,auto,1.2
 
@@ -9,6 +10,7 @@ env = GTK_THEME,Adwaita-dark
 env = QT_QPA_PLATFORMTHEME,qt6ct
 
 exec-once = $terminal
+exec = $status &
 
 general {
     gaps_in = 0   
@@ -29,6 +31,8 @@ bind = $mod, Return, exec, $terminal
 bind = $mod, SPACE, exec, $menu
 bind = $mod, Q, killactive
 bind = $mod, O, exec, $lock
+bind = $mod, M, exec, $status &
+bind = $mod SHIFT, M, exec, killall $status && $status &
 
 bind = MOD1, 1, workspace, 1
 bind = MOD1, 2, workspace, 2
