--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -10,7 +10,7 @@ env = GTK_THEME,Adwaita-dark
 env = QT_QPA_PLATFORMTHEME,qt6ct
 
 exec-once = $terminal
-exec = $status &
+exec-once = $status &
 
 general {
     gaps_in = 0   
@@ -21,6 +21,15 @@ general {
 
 decoration {
     rounding = 0   
+}
+
+input {
+    kb_layout = us
+    follow_mouse = 1
+
+    touchpad {
+        natural_scroll = true
+    }
 }
 
 animations {
