--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -10,11 +10,11 @@ env = GTK_THEME,Adwaita-dark
 env = QT_QPA_PLATFORMTHEME,qt6ct
 
 exec-once = $terminal
-exec-once = $status &
+exec-once = $status
 
 general {
-    gaps_in = 0   
-    gaps_out = 0   
+    gaps_in = 5   
+    gaps_out = 5  
     border_size = 0 
     layout = dwindle
 }
@@ -36,12 +36,12 @@ animations {
     enabled = false
 }
 
-bind = $mod, Return, exec, $terminal
+bind = $mod, Return, exec, $terminal -o font_size=12
 bind = $mod, SPACE, exec, $menu
 bind = $mod, Q, killactive
 bind = $mod, O, exec, $lock
-bind = $mod, M, exec, $status &
-bind = $mod SHIFT, M, exec, killall $status && $status &
+bind = $mod, M, exec, $status
+bind = $mod SHIFT, M, exec, killall $status && $status 
 
 bind = MOD1, 1, workspace, 1
 bind = MOD1, 2, workspace, 2
@@ -59,4 +59,12 @@ bind = $mod SHIFT, 2, movetoworkspace, 2
 bind = $mod SHIFT, 3, movetoworkspace, 3
 bind = $mod SHIFT, 4, movetoworkspace, 4
 bind = $mod SHIFT, 5, movetoworkspace, 5
+
+bind = SUPER, F, fullscreen
+
+binde = CTRL, left,  resizeactive, -10 0
+binde = CTRL, right, resizeactive,  10 0
+binde = CTRL, up,    resizeactive,  0 -10
+binde = CTRL, down,  resizeactive,  0  10
+
 
