--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,12 +9,12 @@ monitor = ,preferred,auto,1.2
 env = GTK_THEME,Adwaita-dark
 env = QT_QPA_PLATFORMTHEME,qt6ct
 
-exec-once = $terminal
+exec-once = $terminal -o font_size=12
 exec-once = $status
 
 general {
-    gaps_in = 5   
-    gaps_out = 5  
+    gaps_in = 0   
+    gaps_out = 0 
     border_size = 0 
     layout = dwindle
 }
