--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -3,6 +3,7 @@ $terminal = kitty
 $menu = wofi --show drun
 $lock = swaylock
 $status = waybar
+$ss = flameshot gui
 
 monitor = ,preferred,auto,1.2
 
@@ -59,6 +60,9 @@ bind = $mod SHIFT, 2, movetoworkspace, 2
 bind = $mod SHIFT, 3, movetoworkspace, 3
 bind = $mod SHIFT, 4, movetoworkspace, 4
 bind = $mod SHIFT, 5, movetoworkspace, 5
+
+
+bind = $mod SHIFT, S, exec, $ss
 
 bind = SUPER, F, fullscreen
 
