--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,6 +4,7 @@ $menu = wofi --show drun
 $lock = swaylock
 $status = waybar
 $ss = flameshot gui
+$bg = swaybg
 
 monitor = ,preferred,auto,1.2
 
@@ -12,6 +13,7 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 
 exec-once = $terminal -o font_size=12
 exec-once = $status
+exec-once = $bg -i /home/ali/pictures/wallpaper/linux.jpg
 
 general {
     gaps_in = 0   
@@ -49,6 +51,7 @@ bind = MOD1, 2, workspace, 2
 bind = MOD1, 3, workspace, 3
 bind = MOD1, 4, workspace, 4
 bind = MOD1, 5, workspace, 5
+bind = MOD1, 6, workspace, 6
 
 bind = $mod, H, movefocus, l
 bind = $mod, L, movefocus, r
@@ -60,16 +63,26 @@ bind = $mod SHIFT, 2, movetoworkspace, 2
 bind = $mod SHIFT, 3, movetoworkspace, 3
 bind = $mod SHIFT, 4, movetoworkspace, 4
 bind = $mod SHIFT, 5, movetoworkspace, 5
-
+bind = $mod SHIFT, 6, movetoworkspace, 6
 
 bind = $mod SHIFT, S, exec, $ss
 
-bind = SUPER, F, fullscreen
+bind = $mod, F, fullscreen
+
+bind = $mod, X, exec, wlogout
 
 binde = CTRL, left,  resizeactive, -10 0
 binde = CTRL, right, resizeactive,  10 0
 binde = CTRL, up,    resizeactive,  0 -10
 binde = CTRL, down,  resizeactive,  0  10
 
+binde = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+binde = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+
+binde = , XF86MonBrightnessUp, exec, brightnessctl set 5%+
+binde = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
+
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 
