--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -52,6 +52,9 @@ bind = MOD1, 3, workspace, 3
 bind = MOD1, 4, workspace, 4
 bind = MOD1, 5, workspace, 5
 bind = MOD1, 6, workspace, 6
+bind = MOD1, 7, workspace, 7
+bind = MOD1, 8, workspace, 8
+bind = MOD1, 9, workspace, 9
 
 bind = $mod, H, movefocus, l
 bind = $mod, L, movefocus, r
@@ -64,6 +67,9 @@ bind = $mod SHIFT, 3, movetoworkspace, 3
 bind = $mod SHIFT, 4, movetoworkspace, 4
 bind = $mod SHIFT, 5, movetoworkspace, 5
 bind = $mod SHIFT, 6, movetoworkspace, 6
+bind = $mod SHIFT, 7, movetoworkspace, 7
+bind = $mod SHIFT, 8, movetoworkspace, 8
+bind = $mod SHIFT, 9, movetoworkspace, 9
 
 bind = $mod SHIFT, S, exec, $ss
 
