--- a/waybar/config
+++ b/waybar/config
@@ -12,12 +12,15 @@
       "on-click": "activate",
       "format": "{icon}",
       "format-icons": {
-          "1": "code",
-          "2": "web",
-          "3": "a",
-          "4": "b",
-          "5": "c",
-          "6": "d",
+          "1": "web",
+          "2": "code",
+          "3": "ddia",
+          "4": "algorithms",
+          "5": "a",
+          "6": "b",
+          "7": "c",
+          "8": "d",
+          "9": "e",
       }  
     },
 
