--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,8 @@
 cursor_blink_interval 0
 cursor_shape block
 shell_integration no-cursor
-
-background #1c1c1c
-foreground #bcbcbc
-
 map ctrl+shift+enter no_op
+
+background #0f160f
+foreground #5a6f5c
+
