--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -13,7 +13,7 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 
 exec-once = $terminal -o font_size=12
 exec-once = $status
-exec-once = $bg -i /home/ali/pictures/wallpaper/linux.jpg
+exec-once = $bg -i $HOME/.config/hypr/linux.jpg
 
 general {
     gaps_in = 0   
