--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,19 +1,21 @@
 $mod = SUPER
-$terminal = kitty 
+$terminal = kitty -o font_size=12
 $menu = wofi --show drun
 $lock = swaylock
 $status = waybar
 $ss = flameshot gui
-$bg = swaybg
+$bg = swaybg -i $HOME/.config/hypr/linux.jpg
+$browser = firefox
 
 monitor = ,preferred,auto,1.2
 
 env = GTK_THEME,Adwaita-dark
 env = QT_QPA_PLATFORMTHEME,qt6ct
 
-exec-once = $terminal -o font_size=12
+exec-once = $bg 
 exec-once = $status
-exec-once = $bg -i $HOME/.config/hypr/linux.jpg
+exec-once = [workspace 1] $browser
+exec-once = [workspace 2] $terminal
 
 general {
     gaps_in = 0   
